# Neural-Networks-Raw

./: .gitignore  CHECKPOINT_v0.2b_MEMORY_REPLAY.md  CHECKPOINT_v0.3_SEQUENCE_LEARNING.md  CHECKPOINT_v0.4_CHAR_RESULTS.md  CHECKPOINT_v0.4_NEUROGENESIS_CALIBRATION.md  CHECKPOINT_v0.4_NEUROGENESIS_RESULTS.md  README.md  RESEARCH_LOG.md  ROADMAP.md  pyproject.toml  requirements.txt  research_checkpoint.md
NOTES/: evaluation_metrics.md  insights_from_hybrid_agnis.md  neurogenesis_design.md  predictive_coding_equations.md  raw_agnis_principles.md
configs/: kaggle_phase1.yaml  kaggle_phase1_memory_sensitivity.yaml  kaggle_phase2.yaml  kaggle_phase3.yaml  kaggle_phase4.yaml  kaggle_phase5.yaml  kaggle_phase6.yaml  phase1_micro.yaml  phase1_smoke.yaml  phase2_micro.yaml  phase2_seq.yaml  phase2_smoke.yaml  phase3_micro.yaml  phase3_neurogenesis.yaml  phase3_smoke.yaml  phase4_char.yaml  phase4_pilot.yaml  phase4_smoke.yaml  phase5_pilot.yaml  phase5_smoke.yaml  phase6_pilot.yaml  phase6_smoke.yaml
experiments/: diagnose_recurrent_collapse.py
results/: .gitkeep
tests/: test_baselines_continual.py  test_benchmark_smoke.py  test_continual_metrics.py  test_fast_memory.py  test_forgetting.py  test_hebbian_update.py  test_memory_sensitivity.py  test_neurogenesis.py  test_phase1_logging.py  test_phase1_task_generators.py  test_phase2_metrics.py  test_phase2_sequence_generators.py  test_phase2_smoke.py  test_phase3_neurogenesis.py  test_phase4_char.py  test_phase5_generation.py  test_phase5_metrics.py  test_phase5_smoke.py  test_phase5_story_domains.py  test_phase6_hierarchy.py  (+7 more)
(+85 files in other folders)
